deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rpg
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: rpg
