deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rpg
spec:
  tls:
    - hosts:
        - rpg.lab.sspcloud.fr
  rules:
    - host: rpg.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rpg
                port:
                  number: 80
